<resources>
    <string name="app_name">Ridez</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="request">Request A Ride</string>
    <string name="offer">Offer A Ride</string>
    <string name="myGroups">My Groups</string>
    <string name="myRides">My Rides</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="title_activity_new_group">New Group</string>

    <string name="MyGroupsHeader">My Groups</string>

    <string name="groupMembers">Members: </string>
    <string name="createGroup">Create</string>
    <string name="groupNameCreateActivity">Name: </string>
    <string name="groupDescriptionCreateActivity">Description: </string>
    <string name="NewGroupHeader">New Group</string>
    <string name="title_activity_my_groups">My Groups</string>
    <string name="title_activity_group_view">Group View</string>
    <string name="title_activity_request_ride">Request A Ride</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="chooseGroups">Choose Groups: </string>
    <string name="requestRideHeader">Request A Ride</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_request_details">Request Details</string>
    <string name="title_activity_offer_ride">Offer A Ride</string>
    <string name="pref_username">il.ac.huji.ridez.username</string>
    <string name="title_activity_my_ridez">My Ridez</string>
    <string name="title_activity_ride_details">Ride Details</string>
    <string name="logout">Logout</string>
    <string name="potential_rides_header">Potential Rides</string>
    <string name="potential_matches_header">Potential Matches:</string>
    <string name="group_name_placeholder">Name</string>
    <string name="group_description_placeholder">Description</string>
    <string name="group_icon_description" >Group icon</string>
    <string name="ride_details_header">Ride Details</string>
    <string name="pickup_placeholder">Pickup: Gedera</string>
    <string name="destination_placeholder">Destination: Petach Tikvah</string>
    <string name="date_placeholder">Date And Time: </string>
    <string name="num_of_passengers_placeholder">Number Of Passengers:</string>
    <string name="save_canges_button">Save changes</string>
    <string name="match_is_driver_placeholder">Driver</string>
    <string name="match_fullname_placeholder">Full Name: </string>
    <string name="match_email_placeholder">Email: </string>
    <string name="match_from_placeholder">Leaving from: </string>
    <string name="match_to_placeholder">Going to: </string>
    <string name="match_date_placeholder">Date and time: </string>
    <string name="match_confirm">Confirmed</string>
    <string name="ride_cell_user_description">User: </string>
    <string name="ride_cell_user_placeholder">Sami the Fireman</string>
    <string name="ride_cell_date_description">On:</string>
    <string name="ride_cell_date_placeholder">26/5/15</string>
    <string name="ride_cell_from_description">From:</string>
    <string name="ride_cell_from_placeholder">where I started</string>
    <string name="ride_cell_to_description">To:</string>
    <string name="ride_cell_to_placeholder">Where I ended</string>
    <string name="ride_cell_as_description">As</string>
    <string name="offer_a_ride_header">Offer A Ride</string>
    <string name="new_ride_from_description">enter your starting address</string>
    <string name="new_ride_to_description">enter your ending address</string>
    <string name="new_ride_date_description">Set a Date</string>
    <string name="new_ride_date_placeholder">No Date Set</string>
    <string name="new_ride_start_description">Set Start Time</string>
    <string name="new_ride_start_placeholder">No time Set</string>
    <string name="new_ride_end_description">Set end Time</string>
    <string name="new_ride_end_placeholder">No time Set</string>
    <string name="new_ride_num_of_passengers_description">Number Of Passengers: </string>
    <string name="new_ride_send_button">Send Offer</string>
    <string name="add_member_ok">ok</string>
    <string name="new_member_cancel">Cancel</string>
    <string name="member_name_placeholder">memName</string>
    <string name="member_email_placeholder">memEmail</string>
    <string name="member_type_placeholder">regular member</string>
    <string name="member_delete" />
    <string name="member_set_admin" />
    <string name="fill_all_fields">Please fill all fields!</string>
    <string name="call_match">Call</string>
    <string name="no_rides">There are no rides yet.</string>
    <string name="new_group_button">New Group</string>
    <string name="no_groups">You are not a member in any group yet.</string>
    <string name="action_add_new_member">Add new member</string>
    <string name="exampeEmail">example@gmail.com</string>
    <string name="resquestRide">Request ride</string>
    <string name="futureRides">Future Rides</string>
    <string name="requestRide2">Request A Ride</string>
    <string name="pastRides">Past Rides</string>
    <string name="pleaseWait">Please wait ...</string>
    <string name="phoneNumberVerification">Verifying your phone number...</string>
    <string name="fillAllFields">Please fill all fields!</string>
    <string name="ridesVerificationCode">Ridez verification code: </string>
    <string name="cannotVerify">Cannot verify your phone number. Please insert the code manually:</string>
    <string name="phoneverif">Phone number verification</string>
    <string name="verify">Verify</string>
    <string name="verificationWrong">The verification code does not match. Try again</string>
    <string name="cancel">Cancel</string>
    <string name="registrationFailed">Registration failed</string>
    <string name="phoneNumberVerified">Phone number verified. Signing up to the system...</string>
    <string name="ok">ok</string>
    <string name="succesfullsignUp">You have successfully signed up</string>
    <string name="admin">Admin</string>
    <string name="passenger">Passenger</string>
    <string name="email">Email: </string>
    <string name="fullname">Full name: </string>
    <string name="goingTO">Going to: </string>
    <string name="leavingFrom">Leaving from: </string>
    <string name="dateAndTime">Date and Time: </string>
    <string name="asDriver">As Driver</string>
    <string name="asPassenger">As Passenger</string>
    <string name="loadinYourData">Loading your data</string>
    <string name="addFriend">Add a friend</string>
    <string name="error">Error: </string>
    <string name="serverProbem">Server problem</string>
    <string name="problem">Problem getting updated member list</string>
    <string name="OK">OK</string>
    <string name="members">Members</string>
    <string name="futureRideRequests">Future Ride Requests</string>
    <string name="signingIn">Signing in to the system ...</string>
    <string name="succesfullSignIn">You have successfully signed in</string>
    <string name="loginFailed">Login Failed!!!</string>
    <string name="loadingPersonalData">Loading your personal data</string>
    <string name="approveLogout">Approve logout</string>
    <string name="areYousureLogout">Are you sure you want to logout?</string>
    <string name="Logout">logout</string>
    <string name="createGroupNotLoggedIn">In order to create a new group, you need to be logged in</string>
    <string name="pleaseLogin">Please log in</string>
    <string name="savingNewGroup">Saving your new group ...</string>
    <string name="Error">"Error! "</string>
    <string name="createRideNeedToBeLoggedIn">In order to create a new ride, you need to be logged in</string>
    <string name="filInAll">Please fill in all the data, and then proceed</string>
    <string name="missingData">Missing Data</string>
    <string name="savingYourOffer">Saving your offer in our systems</string>
    <string name="rideDetails">Ride Details</string>
    <string name="potentiaMatches">Potential Matches</string>
    <string name="Origin">Origin: </string>
    <string name="Destination">Destination: </string>
    <string name="numOfPassengers">Number of passengers: </string>
    <string name="signup">Sign Up</string>
    <string name="registration">Registration</string>
    <string name="Login">Login</string>
    <string name="signin">Sign In</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="FullName">Full Name</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="leave_group">Leave Group</string>
    <string name="delete_member_dialog_header">Delete Member?</string>
    <string name="leave_group_dialog_header">Leave Group?</string>
    <string name="delete_member_dialog_yes_button">Delete</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="set_admin_dialog_header">Set as Admin?</string>
    <string name="added_to_group_error_msg">Error! We know you were added to a group, but we can\'t find it...</string>
    <string name="requested_in_groups_header">Requested in:</string>
    <string name="time_ride_details_header">Time:</string>
    <string name="date_ride_details_header">Date:</string>
    <string name="hint_new_group_name">My Group!</string>
    <string name="add">add</string>
    <string name="emailSent">email sent</string>
    <string name="failedEmail">"Failed to send mail. Error: "</string>
    <string name="send">Send</string>
    <string name="Cancel">Cancel</string>
    <string name="sendInvitation">Send invitation mail</string>
    <string name="notRegistered">" is not registered to Ridez. Do you want to send him an invitation?"</string>
    <string name="yourFriend">"Your friend: "</string>
    <string name="ride_delete">ride_delete</string>
    <string name="approveRide">Ride Accepted</string>
    <string name="delete_ride">Delete Ride?</string>
    <string name="ride_accepted_dialog_messgae">Choosing this action will stop us from looking for new matches for your ride in the future. You can revert this action later.</string>
    <string name="ride_accepted_dialog_title">Mark as set up?</string>
    <string name="new_ride_and">and</string>
    <string name="new_ride_between">Between</string>
    <string name="new_ride_on">On</string>

</resources>
