<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:descendantFocusability="blocksDescendants"
    android:padding="8dip">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_weight="1">
    <LinearLayout
        android:id="@+id/rideUserLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/list_text"
            android:text="@string/ride_cell_user_description"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif"/>
        <TextView
            android:id="@+id/rideUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/list_text"
            android:layout_gravity="center_vertical"
            android:text="@string/ride_cell_user_placeholder"
            android:textSize="18sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/list_text"
            android:text="@string/ride_cell_date_description"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif"/>
        <TextView
            android:id="@+id/rideDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/list_text"
            android:layout_gravity="center_vertical"
            android:text="@string/ride_cell_date_placeholder"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/list_text"
        android:layout_gravity="center_vertical"
        android:text="@string/ride_cell_from_description"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif"/>
    <TextView
        android:id="@+id/rideOrigin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/list_text"
        android:layout_gravity="center_vertical"
        android:text="@string/ride_cell_from_placeholder"
        android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/list_text"
            android:layout_gravity="center_vertical"
            android:text="@string/ride_cell_to_description"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif"/>
        <TextView
            android:id="@+id/rideDestination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/list_text"
            android:layout_gravity="center_vertical"
            android:text="@string/ride_cell_to_placeholder"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/rideKind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/list_text_emphasize"
            android:text="@string/ride_cell_as_description"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:textStyle="bold|italic"
        android:typeface="serif"/>
    </LinearLayout>
   </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/rideAccepted"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/handshake"
            android:background="@color/list_view_background"
            android:contentDescription="@string/approveRide"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:visibility="gone"/>
        <ImageButton
            android:id="@+id/deleteRide"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/deleting"
            android:contentDescription="@string/ride_delete"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:background="@color/background"
            android:visibility="gone"/>
    </LinearLayout>

</LinearLayout>