<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="1dp"
    android:paddingRight="1dp"
    android:orientation="vertical"
    android:background="#ffffff">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="Main Menu"
            android:textSize="30dp"
           android:paddingLeft="120dp"
            android:paddingTop="40dp"
            android:textColor="#004C99"
            android:textStyle="bold"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical">
    <Button
        android:id="@+id/buttonRequestRide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request"
        android:background="@drawable/button_background"/>
    <Button
        android:id="@+id/buttonOfferRide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/offer"
        android:background="@drawable/button_background"/>
    <Button
        android:id="@+id/buttonMyGroups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/myGroups"
        android:background="@drawable/button_background"/>
    <Button
        android:id="@+id/buttonMyRides"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myRides"
        android:background="@drawable/button_background"/>
    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@drawable/button_background"/>

    </LinearLayout>
</LinearLayout>