<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="1dp"
    android:paddingRight="1dp"
    android:orientation="vertical"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/detailsLineHeader"
                    android:text="@string/groupNameCreateActivity"
                    android:gravity="center_vertical"/>
                <EditText
                    android:id="@+id/edtTextGroupName"
                    style="@style/detailsLineContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:hint="@string/hint_new_group_name"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/detailsLineHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/groupDescriptionCreateActivity"
                    android:gravity="center_vertical"/>
                <EditText
                    style="@style/detailsLineContent"
                    android:id="@+id/edtTextGroupDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:singleLine="true"/>
            </LinearLayout>
        </LinearLayout>
        <ImageButton
            android:id="@+id/buttonGroupProfilePicture"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:scaleType="fitXY"
            android:src="@drawable/blank_image_icon"/>
    </LinearLayout>
    <TextView
        style="@style/detailsLineHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/groupMembers"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <AutoCompleteTextView
        android:id="@+id/searchGruopMembers"
        android:hint="@string/exampeEmail"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:imeOptions="actionNext"
        style="@style/detailsLineContent">
    </AutoCompleteTextView>
        <Button
            android:id="@+id/addMemberButton"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:background="@drawable/button_background"
            />
        </LinearLayout>
    <ListView
        android:id="@+id/listGroupMembers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
    <Button
        android:id="@+id/buttonCreateGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createGroup"
        android:background="@drawable/button_background"/>
</LinearLayout>


    <!--android:layout_weight="0.2"-->