<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="8dip">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical" android:layout_weight="1">

        <TextView
            style="@style/detailsLineHeader"
            android:id="@+id/textViewGroupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="end"
            android:text="@string/group_name_placeholder" />
        <TextView
            style="@style/detailsLineContent"
            android:id="@+id/textViewGroupDescription"
            android:layout_width="match_parent"
            android:layout_height="26dip"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/group_description_placeholder" />
    </LinearLayout>
    <ImageView
        android:id="@+id/groupIcon"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginRight="6dip"
        android:layout_marginEnd="6dip"
        android:scaleType="fitXY"
        android:src="@drawable/blank_image_icon"
        android:contentDescription="@string/group_icon_description" />
</LinearLayout>
