<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"

    android:background="@color/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Login"
            android:textSize="35dp"
            android:textColor="#004C99"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:paddingTop="50dp"
            android:paddingBottom="50dp" />
        <EditText
            android:id="@+id/loginEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_default_bg"
            android:layout_marginTop="-2dp"
            android:padding="10dp"
            android:hint="@string/Email"
            android:textColorHint="#bbbbbb"
            android:inputType="textEmailAddress" />
            <!--android:drawableLeft="@drawable/user"/>-->
        <EditText
            android:id="@+id/loginPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bottom_bg"
            android:layout_marginTop="-2dp"
            android:padding="10dp"
            android:hint="@string/password"
            android:textColorHint="#bbbbbb"
            android:password="true"
            android:inputType="textPassword" />
            <!--android:drawableLeft="@drawable/password"/>-->
        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="4dp"
            android:text="@string/signin"
            android:textSize="17dp"


            android:background="@drawable/button_background"
            />
    </LinearLayout>

</RelativeLayout>