<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="40sp"
            android:text="@string/ride_details_header"
            android:textColor="#004C99"
            android:textStyle="bold"
            android:id="@+id/rideDetailsTitle"/>
        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textSize="20dp"-->
            <!--android:text="Requested in Groups:"-->
            <!--android:layout_below="@+id/rideDetailsTitle"-->
            <!--android:id="@+id/rideSubTitle"/>-->
        <!--<ListView-->
            <!--android:id="@+id/rideGroupsListView"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="120dp"-->
            <!--android:isScrollContainer="false"-->
            <!--android:layout_below="@+id/rideSubTitle"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_alignParentStart="true">-->
        <!--</ListView>-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pickup_placeholder"
                android:layout_marginTop="10dp"
                android:textColor="#004C99"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="22sp"
                android:id="@+id/ridePickup"
                android:layout_below="@+id/rideDetailsTitle"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/destination_placeholder"
                android:textSize="22sp"
                android:layout_below="@id/ridePickup"
                android:textColor="#004C99"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:id="@+id/rideDestination"/>
            <TextView
                android:id="@+id/rideDateAndTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/date_placeholder"
                android:textSize="22sp"
                android:textColor="#004C99"
                android:layout_below="@+id/rideDestination"/>

            <TextView
                android:id="@+id/ridePassengersNumTextview"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_of_passengers_placeholder"
                android:layout_marginTop="10dp"

                android:textSize="22sp"
                android:textColor="#004C99"
                android:layout_below="@+id/rideDateAndTimeTextView"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/possibleConnectionsListView"
            android:isScrollContainer="false"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/ridePassengersNumTextview">

        </ListView>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveChangesButton"
            android:text="@string/save_canges_button"
            android:layout_below="@+id/possibleConnectionsListView"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_background"/>

    </RelativeLayout>
</ScrollView>